--- a/styles/layout/forms.sass
+++ b/styles/layout/forms.sass
@@ -1,6 +1,9 @@
 @layer components
 	.form
 		@apply -m-1.5
+
+		&__container
+			height: calc(100vh - 171.5px)
 		
 		&__wrapper
 			@apply bg-white rounded-md p-5 shadow border border-primary-300
@@ -25,19 +28,59 @@
 			border: none !important
 			background-color: #f2f7f9 !important
 			box-shadow: inset 0 0 0 3px #3a4887 !important
+			
   
-		textarea, &-composer__editor .ProseMirror
-			min-height: 92px
+		&-composer__editor .ProseMirror
+			@apply bg-white
 
+		&-composer__body
+			@apply overflow-y-auto
+		
 		&-composer__editor 
 			h2
-				@apply text-xl font-semibold
+				@apply text-3xl
 
 			h3
-				@apply text-lg font-semibold
+				@apply text-2xl
 
 			p, a, ul li, ol li
-				@apply text-sm bg-primary-100
+				@apply text-base bg-white
 
 			blockquote, blockquote *
 				@apply text-lg font-normal italic
+			
+			.img-frame
+				@apply m-2 relative w-48 h-auto overflow-hidden rounded-md border-8 border-white shadow
+
+.ProseMirror p.is-editor-empty:first-child::before 
+	@apply text-primary-900 float-left h-0 pointer-events-none
+	content: attr(data-placeholder)
+
+
+/*EDITION BAR*/
+
+.editor-bar__wrapper 
+	@apply rounded-lg rounded-lg py-1.5 px-2.5 border border-primary-50 sticky top-2.5 bg-white z-50 shadow-sm shadow-primary-100
+
+.editor-bar__wrapper button 
+	background-color: white
+	border: none
+	width: 30px
+	height: 30px
+	padding: 0
+	margin-right: 5px
+
+
+.editor-bar__wrapper svg 
+	width: 22px
+	height: 22px
+
+.form-composer__editor 
+	@apply outline-none
+
+.form-composer__editor .ProseMirror 
+	@apply outline-none pt-5
+
+
+.form-composer__editor .ProseMirror img 
+	max-width: 100%
