feat: front --> update stores publication layout + implement multiple images selector + implement remove images from list + implement arbitrary images positioning on stories' posts

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -250,7 +250,7 @@ form .form-control::placeholder {
 .toast {
 	min-width: 300px;
 	z-index: 1000;
-	img.rounded.mr-2 {
+	img.rounded-md.mr-2 {
 		width: 20px;
 		height: 20px;
 	}
