--- a/styles/components/mapsInfoBox.sass
+++ b/styles/components/mapsInfoBox.sass
@@ -1,7 +1,7 @@
 .gmaps-infobox
-    @apply bg-white rounded shadow-xl flex items-stretch pl-2 pt-1.5 pb-3 pr-3
+    @apply bg-white rounded-md shadow-xl flex items-stretch pl-2 pt-1.5 pb-3 pr-3
     &__picture
-        @apply mr-4 w-24 mt-1 rounded overflow-hidden
+        @apply mr-4 w-24 mt-1 rounded-md overflow-hidden
         min-width: 90px
     &__text
         @apply pr-1
