--- a/styles/components/modal.sass
+++ b/styles/components/modal.sass
@@ -9,18 +9,18 @@
         @apply bg-primary-900 bg-opacity-80 fixed inset-0 w-full h-full
 
     &__wrapper
-        @apply block bg-white w-11/12 lg:w-6/12 mx-auto shadow-xl  rounded-lg
+        @apply block bg-white w-11/12 lg:w-6/12 mx-auto shadow-xl  rounded-md
         z-index: 1002
         max-height: 80vh
 
     &__container
-        @apply w-full h-full relative z-50 border-4 border-white rounded-lg
+        @apply w-full h-full relative z-50 border-4 border-white rounded-md
 
     &__header, &__body, &__footer
         @apply p-5
 
     &__header
-        @apply border-b border-primary-300 relative flex items-center justify-between
+        @apply border-b border-primary-100 relative flex items-center justify-between
 
         span
             @apply text-xl
@@ -30,4 +30,4 @@
         max-height: 60vh
 
     &__footer
-        @apply border-t border-primary-300 flex items-center justify-end
+        @apply border-t border-primary-100 flex items-center justify-end
