--- a/styles/layout/forms.sass
+++ b/styles/layout/forms.sass
@@ -6,19 +6,19 @@
 			height: calc(100vh - 171.5px)
 		
 		&__wrapper
-			@apply bg-white rounded-md p-5 shadow border border-primary-300
+			@apply bg-white rounded-md p-5 shadow border border-primary-100
 		
 		&__group
 			@apply p-1.5 flex flex-col
 
 		&__label
-			@apply block mb-2 text-sm font-medium text-primary-400
+			@apply block mb-2 text-sm font-medium text-primary-500
 
 		&__text_info
 			@apply text-xs mt-2 text-primary-400
 
 		&__control
-			@apply bg-primary-100 border border-primary-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5
+			@apply bg-primary-50 border border-primary-100 text-primary-400 text-sm rounded-md focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5
   
 		.location-control::placeholder
 			color: #173572
@@ -60,7 +60,7 @@
 /*EDITION BAR*/
 
 .editor-bar__wrapper 
-	@apply rounded-lg rounded-lg py-1.5 px-2.5 border border-primary-50 sticky top-2.5 bg-white z-50 shadow-sm shadow-primary-100
+	@apply rounded-md rounded-md py-1.5 px-2.5 border border-primary-50 sticky top-2.5 bg-white z-50 shadow-sm shadow-primary-100
 
 .editor-bar__wrapper button 
 	background-color: white
