--- a/styles/components/dropdown.sass
+++ b/styles/components/dropdown.sass
@@ -9,7 +9,7 @@
         @apply rotate-90
         
     .dropdown__menu
-        @apply list-none bg-white rounded border border-primary-300 m-0 w-36 absolute top-8 right-0 z-40
+        @apply list-none bg-white rounded-md border border-primary-100 m-0 w-36 absolute top-8 right-0 z-40
 
     .dropdown__menu_item
         @apply flex items-center px-2.5 py-2 w-full text-15 transition-all duration-300 ease-in-out
