--- a/styles/pages/layout-story.sass
+++ b/styles/pages/layout-story.sass
@@ -13,4 +13,4 @@
 			@apply p-2 w-full md:w-1/3 overflow-hidden flex items-center justify-center
 
 		.pswp-thumbnail img
-			@apply w-full h-full object-cover rounded
+			@apply w-full h-full object-cover rounded-md
