chore: front --> home pagespeed optimization

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -17,6 +17,7 @@
 @import "pages/layout-story.sass";
 @import "pages/layout-empreses.sass";
 @import "pages/layout-admin.sass";
+@import "pages/layout-home.sass";
 @import "base/global.sass";
 
 @import "vendors/cookie-consent.sass";
