add: front --> pagespeed optimization III

--- a/styles/pages/layout-home.sass
+++ b/styles/pages/layout-home.sass
@@ -1,3 +1,6 @@
 .bg-geo
     background-image: url('/bg-geo.png')
     background-repeat: repeat
+
+    @supports (background-image: url('/bg-geo.webp'))
+        background-image: url('/bg-geo.webp')
