add: front --> update layout + styles lists page

--- a/styles/components/breadcrumb.sass
+++ b/styles/components/breadcrumb.sass
@@ -5,10 +5,8 @@
             @apply px-2 flex items-center whitespace-nowrap
         &__item:not(:last-child)::after
             content: "/"
-            @apply mx-0.5 block text-primary-400 
-        &__link
-            @apply text-primary-400
+            @apply mx-0.5 block
         &__link:hover
             @apply underline
         &__link.active
-            @apply text-primary-500 font-medium no-underline
+            @apply font-medium no-underline
