add: front --> layout + styles activities list

--- a/styles/components/breadcrumb.sass
+++ b/styles/components/breadcrumb.sass
@@ -1,6 +1,6 @@
 @layer components
     .breadcrumb
-        @apply text-sm flex items-center overflow-x-auto
+        @apply text-sm flex items-center overflow-x-auto mb-0
         &__item
             @apply px-2 flex items-center whitespace-nowrap
         &__item:not(:last-child)::after
