--- a/styles/components/modal.sass
+++ b/styles/components/modal.sass
@@ -11,7 +11,6 @@
     &__wrapper
         @apply block bg-white w-11/12 lg:w-6/12 mx-auto shadow-xl  rounded-md
         z-index: 1002
-        max-height: 80vh
 
     &__container
         @apply w-full h-full relative z-50 border-4 border-white rounded-md
@@ -28,6 +27,9 @@
     &__body
         @apply overflow-scroll
         max-height: 60vh
+
+    &__body.map
+        @apply max-h-screen
 
     &__footer
         @apply border-t border-primary-100 flex items-center justify-end
