--- a/styles/pages/layout-story.sass
+++ b/styles/pages/layout-story.sass
@@ -9,6 +9,17 @@
 		p
 			@apply my-5
 
+		
+		blockquote, blockquote *
+			@apply text-xl font-semibold my-8
+
+		blockquote
+			@apply relative pl-8
+
+		blockquote::before
+			content: '"'
+			@apply absolute -left-2 top-2 text-8xl opacity-50 text-secondary-50 leading-10
+
 		.pswp-thumbnails
 			@apply flex items-stretch flex-wrap -mx-2 mb-6
 
