add: front --> services + views for trip entities (wip)

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -50,6 +50,14 @@
 	font-display: swap;
 }
 
+@font-face {
+	font-family: "LibreCaslon";
+	src: url("../fonts/LibreCaslonCondensed-Regular.woff2");
+	font-weight: 400;
+	font-style: normal;
+	font-display: swap;
+}
+
 $dark-blue: #00206b;
 $medium-blue: #6376a0;
 $soft-blue: #ebf1ff;
