add: front --> views for trip list + trip category details (wip)

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -51,9 +51,9 @@
 }
 
 @font-face {
-	font-family: "LibreCaslon";
-	src: url("../fonts/LibreCaslonCondensed-Regular.woff2");
-	font-weight: 400;
+	font-family: "Domine";
+	src: url("../fonts/Domine-Semibold.ttf");
+	font-weight: 600;
 	font-style: normal;
 	font-display: swap;
 }
