chore: front --> update breadcrumb naming + 301s

--- a/styles/components/breadcrumb.sass
+++ b/styles/components/breadcrumb.sass
@@ -1,6 +1,6 @@
 @layer components
     .breadcrumb
-        @apply text-sm flex items-center overflow-x-auto m-0 p-0
+        @apply text-xs flex items-center overflow-x-auto m-0 p-0
         &__item
             @apply flex items-center whitespace-nowrap
         &__item:not(:last-child)::after
