--- a/styles/app.scss
+++ b/styles/app.scss
@@ -15,6 +15,7 @@
 @import "pages/layout-lists.sass";
 @import "pages/layout-stories.sass";
 @import "pages/layout-story.sass";
+@import "pages/layout-place.sass";
 @import "pages/layout-empreses.sass";
 @import "pages/layout-admin.sass";
 @import "pages/layout-home.sass";
@@ -46,6 +47,14 @@
 	font-family: "Circular";
 	src: url("../fonts/circular-light.woff2");
 	font-weight: 200;
+	font-style: normal;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: "Prata";
+	src: url("../fonts/Prata-Regular.ttf");
+	font-weight: 400;
 	font-style: normal;
 	font-display: swap;
 }
