--- a/styles/layout/navigation.sass
+++ b/styles/layout/navigation.sass
@@ -40,10 +40,10 @@
 				@apply absolute top-5 right-5 z-50 lg:hidden
 
 			&__panel
-				@apply fixed -top-full inset-x-0 h-screen bg-white transition-all duration-500 ease-in-out p-5 flex flex-wrap justify-center lg:relative lg:top-auto lg:left-auto lg:right-auto lg:h-auto  lg:bg-transparent lg:p-0 lg:w-full lg:block
+				@apply fixed -top-full inset-x-0 h-0 overflow-hidden bg-white transition-all duration-500 ease-in-out flex flex-wrap justify-center lg:relative lg:top-auto lg:left-auto lg:right-auto lg:bg-transparent lg:w-full lg:block
 
 			&__panel.open
-				@apply top-0 z-40
+				@apply top-0 z-40 h-screen p-5 lg:p-0 lg:h-auto
 
 			&__form
 				@apply w-full relative rounded-md overflow-hidden pt-20 lg:pt-0 lg:w-auto
