feat: front --> subscribe to newsletter

--- a/styles/layout/forms.sass
+++ b/styles/layout/forms.sass
@@ -12,7 +12,7 @@
 			@apply p-1.5 flex flex-col
 
 		&__label
-			@apply block mb-2 text-sm font-medium text-primary-500
+			@apply block mb-1 text-xs font-medium tracking-wide text-primary-500
 
 		&__text_info
 			@apply text-xs mt-2 text-primary-400
