fix: Front --> sharebar modal backdrop

--- a/styles/components/modal.sass
+++ b/styles/components/modal.sass
@@ -6,7 +6,7 @@
 
     &.active::before
         content: ""
-        @apply bg-primary-300 bg-opacity-40 backdrop-blur-md fixed inset-0 w-full h-full
+        @apply bg-primary-400 bg-opacity-60 fixed inset-0 w-full h-full
 
     &__wrapper
         z-index: 1002
