--- a/styles/layout/footer.sass
+++ b/styles/layout/footer.sass
@@ -3,7 +3,7 @@ footer
 	a
 		@apply text-primary-500 transition-all duration-300 ease-in-out
 	svg
-		@apply mr-2 transition-all duration-300 ease-in-out text-primary-500
+		@apply transition-all duration-300 ease-in-out text-primary-500 w-6 h-6
 
 	a:hover
 		@apply text-primary-500
